[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-tool-kit"
version = "0.3.4"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)"]
description = "A from-scratch neural network and tensor library built in Python for learning, experimentation, and deep understanding of modern ML systems."
readme = "README.md"
authors = [{ name="Chike Ikefuama"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.3.1",
    "matplotlib>=3.10.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neuraltoolkit = ["archive/**/*"]

[tool.setuptools]
include-package-data = true
